<resources>
    <string name="app_name">Pasco Customer</string>
    <string name="english">English</string>
    <string name="continues">Continue</string>
    <string name="log_in">Log in</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin"> Sign In</string>
    <string name="unable_to_connect">Unable to connect to the internet please try again</string>
    <string name="server_error">Server Error</string>
    <string name="please_wait">Please Wait...\n</string>
    <string name="login_error">Login error</string>
    <string name="OK">Ok</string>
    <string name="tips_annoucements_or_n_features_go_here_in_carousel">Tips, annoucements or \n features go here in carousel</string>
    <string name="enter_4_digit_code_send_to">Enter 4-digit code send to</string>
    <string name="glad_to_have_you_back_enter_your_credentials_n_to_log_in_to_your_account">Glad to have you back! Enter your credentials \n to log in to your account</string>
    <string name="as_client">As Client</string>
    <string name="as_driver">As Driver</string>
    <string name="welcome">Welcome</string>
    <string name="phone">Phone</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="notification">Notification</string>
    <string name="orders">Orders</string>
    <string name="more">More</string>
    <string name="profile">Profile</string>
    <string name="your_information_is_under_review_we_ll_contact_you_soon">Your information is under review. We\'ll contact you soon.</string>
    <string name="ok">Ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coupons">Coupons</string>
    <string name="submit">Submit</string>
    <string name="selectTransType">Select Transporter Type</string>
    <string name="selectVehicleType">Select vehicle type</string>
    <string name="pick_start_point">Pick start point</string>
    <string name="pick_destination_point">Pick destination point</string>
    <string name="cargo_qty">Cargo Qty</string>
    <string name="payment_method">Payment Method</string>
    <string name="your_message">Your Message</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="google_key">AIzaSyA3KVnFOiaKNlhi4hJB8N2pB8tyoe_rRxQ</string>
    <string name="expected_time">Expected Time</string>
    <string name="booking">Booking Amount</string>
    <string name="km">455 Km</string>
    <string name="hr">7/hr</string>
    <string name="total_amount">Total Amount</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="all_bidds">All Bidds</string>
    <string name="accept">Accept</string>
    <string name="custer_name">Custer Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pickup">Pickup</string>
    <string name="drop">Drop</string>
    <string name="reject">Reject</string>
    <string name="e_mail">Email</string>
    <string name="history">History</string>
    <string name="current_city">Current City</string>
    <string name="pasco_rewards">Pasco Rewards</string>
    <string name="notifications">Notifications</string>
    <string name="_2021_01_22_05_56pm">2021-01-22-05:56PM</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to Delete ?</string>
    <string name="yes">Yes</string>
    <string name="price">Price</string>
    <string name="serial_no">Serial No.</string>
    <string name="drivername">Driver Name</string>
    <string name="abhi_gmail_com">Email</string>
    <string name="home">Home</string>
    <string name="check_approval_status">Check Approval Status</string>
    <string name="message_driver">Message</string>
    <string name="terms_and_conditions">Term and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="who_us">Who Us</string>
    <string name="contact_with_us">Contact Us</string>
    <string name="share_the_app">Share App</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="bidding_details">Bidding Details</string>
    <string name="loyalty_program_list">Loyalty Program List</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_1234567890">+ 1234567890</string>
    <string name="password">Password</string>
    <string name="abhi_123">Abhi@123</string>
    <string name="verification_text">Please enter the vertication code sent to your number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_6_digit_code">Enter 6 - Digit code</string>
    <string name="createaccount">Create New Account</string>
    <string name="don_t_receive_the_code">Don\'t receive the code!</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="username">User Name</string>
    <string name="abcd_gmail_com">abcd@gmail.com</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="with_a_valid_number_you_can_access_deliveries_and_other_services">With a valid number,you can access deliveries,and other services</string>
    <string name="inactive">InActive</string>
    <string name="active">Active</string>
    <string name="my_account_driver">My Profile</string>
    <string name="my_wallet_driver">My Wallet</string>
    <string name="order_history_driver">Order History</string>
    <string name="abhishek">Abhishek</string>
    <string name="orderid">#23232</string>
    <string name="order_price">Order Price</string>
    <string name="_20_00">20.00$</string>
    <string name="end_point">End Point</string>
    <string name="dashboard">Dashboard</string>
    <string name="there_are_no_current_requests">There are currently no requests.</string>
    <string name="accept_order">Accept order</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="my_account">My Account</string>
    <string name="update">Update</string>
    <string name="approval_status">Approval Status</string>
    <string name="change_password">Change Password</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log out?</string>
    <string name="are_you_sure_you_want_to_accept_this_ride">Are you sure you want to accept this ride?</string>
    <string name="order_sent_successfully_please_wait_for_the_customer_to_accept_the_ride">Order sent successfully. Please wait for the customer to accept the ride.</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="specify_the_range_for_your_ride_location_rides_will_be_provided_based_on_your_specified_locations">Specify the range for your ride location; rides will be provided based on your specified locations.</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="total_wallet_balance"> Available Balance</string>
    <string name="licence_no">Licence no</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="arabic_language">Arabic Language</string>
    <string name="english_lag">English</string>
    <string name="selectStatus">Select Status\n</string>
    <string name="selectCountryType">Select Country\n</string>
    <string name="selectCity">Select City\n</string>
    <string name="pickup_details">Pickup Point</string>
    <string name="dropping_point">Dropping Point</string>
    <string name="confirm_pickup_drop"><![CDATA[Confirm Pickup & Drop]]></string>
    <string name="pickup_addressnotsame">Pickup address and Delivery address should not be same.</string>
    <string name="pickup_point">PickUp Point</string>
    <string name="search_location">Search Location</string>
    <string name="customername">Abhishek Tiwari</string>
    <string name="customeremail">abhi841501@gmail.com</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="contact_support">Contact support</string>
    <string name="terms_and_conditionss">Terms and Conditions</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="warning">Warning</string>
    <string name="you_must_be_allowed_to_access_your_location">You must be allowed to access your location</string>
    <string name="give_permission_in_the_phone_settings">Give permission in the phone settings</string>
    <string name="okay">Okay</string>
</resources>