<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeSkyblue"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/logo_color">

            <RelativeLayout
                android:id="@+id/relativeCircle"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_background"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/warning" />


            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeSkyblue"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/warning"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeSkyblue"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/you_must_be_allowed_to_access_your_location"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_txt_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeSkyblue"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/give_permission_in_the_phone_settings"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_txt_size" />

            <Button
                android:id="@+id/okButtonWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/white"
                android:text="@string/okay"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
