<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/earth_yellow"
    tools:context=".commonpage.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imgConst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Tips, annoucements or \n features go here in carousel"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imgLogo"
                app:layout_constraintStart_toStartOf="@+id/imgLogo"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="190dp"
            android:background="@drawable/login_background">


            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/welcome"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/credentialTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/glad_to_have_you_back_enter_your_credentials_n_to_log_in_to_your_account"
                android:textColor="@color/black_new"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userConst"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/as_client_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/credentialTxt"
                app:layout_constraintWidth_percent="0.9">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/asClientConst"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/as_client_white_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4">

                    <TextView
                        android:id="@+id/clientTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/as_client"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/asDriverConst"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4">

                    <TextView
                        android:id="@+id/driverTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/as_driver"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nameConst"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/all_circle_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userConst"
                app:layout_constraintWidth_percent=".9">


                <ImageView
                    android:id="@+id/personIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:src="@drawable/smartphone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/grey_dark" />

                <TextView
                    android:id="@+id/code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="(+966)"
                    android:paddingLeft="15dp"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/personIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/code"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/continueBtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/nameConst"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/nameConst"
                android:layout_marginBottom="120dp"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintWidth_percent=".9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUpCosnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/notYet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/grey_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/sign_up"
            android:textColor="@color/earth_yellow"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/notYet"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>